# timeventx

./: .drone.yml  .gitignore  Makefile  README.md  codecov.yml  main.py  microWebSocket.py  microWebSrv.py  microWebTemplate.py  mips-requirements.py  pyproject.toml
.github/workflows/: ci.yml
backend/: .gitignore  README.md  codecov.yml  mips-requirements.py  pyproject.toml
backend/garden_water/: _common.py  _logging.py  actions.py  configuration.py  main.py  rp2040.py  stats.py  timer_runner.py  web_server.py
backend/garden_water/actions/: actions.py  noop.py
backend/garden_water/tests/: _common.py  test_logging.py  test_main.py  test_timer_runner.py  test_web_server.py
backend/garden_water/tests/timers/: test_collections.py  test_intervals.py  test_timers.py
backend/garden_water/timers/: intervals.py  serialisation.py  timers.py
backend/garden_water/timers/collections/: abc.py  database.py  listenable.py  memory.py
backend/timeventx/: _common.py  _logging.py  app.py  app_utils.py  configuration.py  main.py  rp2040.py  timer_runner.py  web_server.py
backend/timeventx/actions/: noop.py
backend/timeventx/tests/: _common.py  test_app.py  test_logging.py  test_main.py  test_timer_runner.py  test_web_server.py
backend/timeventx/tests/timers/: test_collections.py  test_intervals.py  test_timers.py
backend/timeventx/timers/: intervals.py  serialisation.py  timers.py
backend/timeventx/timers/collections/: abc.py  database.py  listenable.py  memory.py
frontend/: .eslintrc.yml  .gitignore  README.md  index.html  jest.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/src/: config.ts  index.tsx
frontend/src/components/: Header.tsx  IntervalsTable.tsx  JoyToaster.tsx  TimerCreationRow.tsx  TimerRow.tsx  TimersTable.tsx
frontend/src/lib/: api-client.ts  marker.ts  time-seralisation.ts
frontend/src/models/: timers.ts
frontend/src/pages/Config/: index.tsx
frontend/src/pages/Home/: index.tsx  style.css
frontend/src/pages/Logs/: index.tsx
frontend/src/pages/Reset/: index.tsx
frontend/src/pages/Stats/: index.tsx
frontend/src/pages/Timers/: index.tsx  style.css
frontend/tests/: example.spec.ts  page-loads.spec.ts  timers.spec.ts
frontend/tests/lib/: api-client.spec.ts
frontend/tests/system/: page-loads.spec.ts  timers.spec.ts
frontend/tests/unit/: api-client.spec.ts
garden_water/: _logging.py  configuration.py  database.py  main.py  models.py  serialisation.py  socket_test.py  temp_debug.py  timer_runner.py  web_server.py
garden_water/tests/: _common.py  garden-water.sqlite  test_database.py  test_timer_runner.py  test_web_server.py
garden_water/tests/timers/: test_btree.py  test_collections.py  test_timers.py
garden_water/timers/: intervals.py  models.py  serialisation.py  timers.py
garden_water/timers/collections/: _btree.py  abc.py  database.py  listenable.py  memory.py
images/: logo.xcf
micropython/: Dockerfile  time.1.diff
scripts/: build-backend.sh  build-frontend.sh  build.sh  create-config.py  deploy.sh  run-on-device.sh  run-test-backend-server.sh
scripts/device/: README.md  main.py  network-status.py  reset.py
