[tool.poetry]
name = "garden-water"
version = "0.1.0"
description = ""
authors = ["Colin Nolan <cn580@alumni.york.ac.uk>"]
readme = "README.md"
packages = [{include = "garden_water"}]
exclude = ["garden_water/tests"]

[tool.poetry.dependencies]
python = "^3.10"
microwebsrv2 = {git = "https://github.com/jczic/MicroWebSrv2.git"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
requests = "^2.31.0"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["garden_water/tests"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
