[tool.poetry]
name = "garden-water"
version = "0.1.0"
description = ""
authors = ["Colin Nolan <cn580@alumni.york.ac.uk>"]
readme = "README.md"
packages = [{include = "garden_water"}]
exclude = ["garden_water/tests"]

[tool.poetry.dependencies]
python = "^3.11"
microdot = {git = "https://github.com/miguelgrinberg/microdot.git"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
requests = "^2.31.0"
black = "^23.3.0"
isort = "^5.12.0"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
coverage = "^7.3.2"

[tool.poetry.group.dist.dependencies]
mpy-cross = "^1.20.0"

[tool.poetry.group.deploy.dependencies]
mpremote = "^1.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["garden_water/tests"]
log_cli = true
log_file = "pytest.log"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.coverage.run]
omit = [
    "garden_water/tests/*",
    "*.pyc",
]
